welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var compt:Int
      ^golomb:3: error: local variables must be initialized
  var compt:Int
      ^golomb:7: error: type mismatch;
 found   : Unit
 required: Int
  for(j<-1 to num){}
       ^